[project]
name = "apple-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "requests>=2.32.4",
    "sentencepiece>=0.2.0",
    "transformers>=4.52.4",
    "mlx-lm (>=0.25.2,<0.26.0)",
    "prompt-toolkit>=3.0.51",
    "rich>=14.0.0",
]
